# rustyfications

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/config/: config.ron
notifications/: Cargo.toml
notifications/src/: action.rs  hints.rs  id.rs  lib.rs  server_info.rs
rustyfications/: Cargo.toml
rustyfications/src/: main.rs  types.rs  utils.rs
src/: main.rs  types.rs  utils.rs
src/config/: mod.rs
src/dbus/: action.rs  hints.rs  id.rs  mod.rs
src/gui/: mod.rs  utils.rs  window.rs
