[package]
name = "rustyfications"
version = "0.1.8"
edition = "2021"

[dependencies]
env_logger = "0.11"
futures = "0.3"
gtk = { version = "0.9", package = "gtk4" }
gtk-layer-shell = { version = "0.4", package = "gtk4-layer-shell" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", features = ["local-offset"] }
zbus = "4.4"
